--- a/WindowsFormsApp1/Form1.resx
+++ b/WindowsFormsApp1/Form1.resx
@@ -2085,6 +2085,9 @@
         du3/AwH7S2qEyovDAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="errorProviderUsername.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>132, 14</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
@@ -7797,4 +7800,7 @@
         R3YOKlCLfn+R/9k=
 </value>
   </data>
+  <metadata name="errorProviderPassword.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>309, 13</value>
+  </metadata>
 </root>
